<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@color/white"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="30dp"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/user_edit_back"
        android:src="@drawable/ic_back" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/user_edit"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingEnd="15dp"
        android:paddingStart="0dp"
        android:text="@string/user_edit_save"
        android:textColor="@color/colorblue_btn"
        android:textSize="18sp" />

</LinearLayout>