<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray2"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_take_photo"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/btn_white_dark"
        android:text="@string/str_take_photo"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray2" />

    <Button
        android:id="@+id/btn_from_album"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/btn_white_dark"
        android:text="@string/str_from_album"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/btn_white_dark"
        android:textColor="@color/red"
        android:text="@string/str_cancel"
        android:textSize="18sp" />

</LinearLayout>