<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/adapter_item_white_dark"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/tv_note_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingEnd="8dp"
            android:paddingStart="0dp">

            <TextView
                android:id="@+id/tv_note_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/list_item_content"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_like_comment_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:lines="1"
                android:text="@string/like_and_comment_num" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/img_note"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/str_image"
            android:scaleType="fitXY"
            android:src="@color/gray2" />

    </LinearLayout>
</LinearLayout>