<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_white_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_hint"
        android:layout_width="260dp"
        android:layout_height="110dp"
        android:gravity="center"
        android:text="@string/str_not_login"
        android:textColor="@color/black_3" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/black_3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_cancel"
            android:textColor="@color/publish_text_color" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/black_3" />

        <TextView
            android:id="@+id/tv_to_login"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_to_login"
            android:textColor="@color/dialog_orange" />

    </LinearLayout>
</LinearLayout>