<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <ScrollView
        android:id="@+id/scrollView_news"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/friends_news_img_detail"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/user"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/friends_news_username_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/list_friends_item_username"
                        android:layout_marginTop="15dp"
                        android:textSize="18sp"/>
                    <TextView
                        android:id="@+id/friends_news_create_time_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/list_friends_item_publishtime"
                        android:layout_marginTop="5dp"/>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/friends_news_content_detail"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/gray1"
                android:gravity="center"
                android:text="@string/list_friends_item_content"
                android:textSize="20sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="26dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/friends_time"
                    android:layout_marginLeft="10dp"
                    />
                <TextView
                    android:id="@+id/friends_news_start_time_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@android:color/darker_gray"
                    android:gravity="center"
                    android:layout_marginLeft="4dp"
                    android:text="@string/list_friends_item_time_start"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@android:color/darker_gray"
                    android:gravity="center"
                    android:layout_marginLeft="4dp"
                    android:text="@string/list_friends_item_time_middle"/>
                <TextView
                    android:id="@+id/friends_news_end_time_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@android:color/darker_gray"
                    android:gravity="center"
                    android:layout_marginLeft="4dp"
                    android:text="@string/list_friends_item_time_end"/>
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/friends_site"
                    android:layout_marginLeft="30dp"/>
                <TextView
                    android:id="@+id/friends_news_place_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/list_friends_item_site"
                    android:gravity="center"
                    android:textColor="@android:color/darker_gray"
                    android:layout_marginLeft="4dp"
                    android:textSize="16sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="26dp"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/friends_news_views_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:text="@string/list_friends_item_browse"
                    android:layout_marginLeft="10dp"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="19dp"
                    android:layout_weight="1"
                    android:src="@drawable/friends_discussnum"
                    android:layout_gravity="right"
                    android:layout_toLeftOf="@id/friendsnews_detail_discuss"/>
                <TextView
                    android:id="@+id/friendsnews_detail_discuss"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:text="@string/detail_friends_news_discuss"
                    android:layout_gravity="right"
                    android:layout_toLeftOf="@id/friendsnews_detail_chatimg"/>

                <ImageView
                    android:id="@+id/friendsnews_detail_chatimg"
                    android:layout_width="0dp"
                    android:layout_height="19dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/friends_discussnum"
                    android:layout_gravity="right"
                    android:layout_toLeftOf="@id/friendsnews_detail_chat"/>
                <TextView
                    android:id="@+id/friendsnews_detail_chat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:layout_gravity="right"
                    android:text="@string/detail_friends_news_chat"
                    android:layout_alignParentRight="true"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:descendantFocusability="blocksDescendants">
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycle_view_comment_friends"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="false"
                    android:overScrollMode="never" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
    <include layout="@layout/item_write_comment" />
</LinearLayout>